--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ nav ul li:last-child:after{
     content: "";
 }
 
+nav ul li:last-child{
+    animation: fadeInNavText 1s ease-in-out;
+}
+
 nav a{
     color: inherit;
     text-decoration: none;
@@ -72,12 +76,6 @@ nav a:hover{
 
 .container.red{
     background-color: #efebeb;
-}
-
-@media only screen and (max-width: 800px){
-    .container{
-        background-color: green !important;
-    }
 }
 
 .left{
@@ -362,14 +360,6 @@ nav a:hover{
     color: #000 !important;
 }
 
-/* .table-container table tr:first-child th::after{
-    display: block;
-    content: "";
-    width: 3px;
-    height: 3px;
-    background: transparent url('i/icon-toggle.png') no-repeat;
-} */
-
 .table-container table tr:nth-child(2n-1){
     background-color: #f7f7f8;
 }
@@ -483,5 +473,130 @@ nav a:hover{
 
 @keyframes fadeInFromBottom {
     from {opacity: 0; transform: translateY(40px);}
-    to   {opacity: 1; transform: translateY(0px);}
+    to   {opacity: 1; transform: translateY(0px) ;}
+}
+
+@keyframes fadeInNavText {
+    from {opacity: 0; transform: translateY(0px);}
+    to   {opacity: 1; transform: translateY(0px) ;}
+}
+
+
+/* MOBILE VIEWPORT */
+
+
+@media screen and (max-width: 980px){
+
+    .container{
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .container#splash{
+        height: 100vh;
+        justify-content: space-between;
+        padding: 0px;
+    }
+
+    .left{
+        width: 100%;
+        box-sizing: border-box;
+        height: auto;
+        padding: 20px;
+    }
+
+    .left .inner{
+        animation: none;
+        opacity: 1;
+    }
+
+    .left h1{
+        font-size: 20px;
+        text-align: left;
+        line-height: 150%;
+    }
+
+    .left p{
+        font-size: 14px;
+        opacity: .7;
+        text-align: left;
+    }
+
+    .left a{
+        display: none;
+    }
+
+    .right{
+        width: 100%;
+        animation: none;
+    }
+
+    .right .portal{
+        padding: 60px 20px;
+        /* animation: none; */
+    }
+
+    .right .portal h2{
+        font-size: 20px;
+        opacity: 1;
+        animation: none;
+        font-weight: normal;
+    }
+
+    .right .portal p{
+        animation: none;
+        opacity: .5;
+        font-size: 12px;
+    }
+
+    .container{
+        min-height: 100vh;
+    }
+
+    .container .repository{
+        max-width: 100%;
+        height: auto;
+        
+        padding: 0px;
+        justify-content: center;
+    }
+
+    .repository p{
+        margin-top: 100px;
+        text-align: center;
+    }
+
+    .repository .register-container{
+        flex-direction: column;
+    }
+
+    .repository .register-container a{
+        width: 100%;
+        padding: 20px 40px;
+        margin-bottom: 20px;
+        margin-right: 0px;
+    }
+
+    .repository .register-container a:last-child{
+        /* margin-bottom: 50px; */
+    }
+
+    .repository .register-container a h2{
+        font-size: 20px;
+        font-weight: normal;
+    }
+
+    .repository .register-container a p{
+        font-size: 14px;
+        margin-top: 20px;
+        line-height: 150%;
+    }
+
+    .navbar-container li{
+        display: none;
+    }
+
+    .navbar-container li:last-child{
+        display: initial;
+    }
 }
